Bug 513565 - Custom application shortcut entry added from app chooser dialog (not "Add Command" dialog") is added to the wrong category and can't be edited or deleted
Summary: Custom application shortcut entry added from app chooser dialog (not "Add Com...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_keys (other bugs)
Version First Reported In: 6.5.4
Platform: Arch Linux Linux
: HI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-19 06:57 UTC by Jin Liu
Modified: 2026-02-05 02:52 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jin Liu 2025-12-19 06:57:36 UTC
STEPS TO REPRODUCE
1. Add New...
2. Click the "browse" button and select an executable

OBSERVED RESULT
1. An entry is added to the "System Services" category.
2. There's no "delete" button on hover.

EXPECTED RESULT
1. An entry is added to the "Applications" category.
2. There's a "delete" button on hover, like other entries.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.21.0
Qt Version: 6.10.1
Kernel Version: 6.18.1-arch1-2 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5600H with Radeon Graphics
Memory: 16 GiB of RAM (15.0 GiB usable)
Graphics Processor: AMD Radeon Graphics
Comment 1 Nate Graham 2025-12-19 16:56:39 UTC
After you click "Add New", are you clicking on "Application…" or "Command or Script…"?
Comment 2 Jin Liu 2025-12-20 03:44:38 UTC
(In reply to Nate Graham from comment #1)
> After you click "Add New", are you clicking on "Application…" or "Command or
> Script…"?

"Application...", then click the small button to select a file.
Comment 3 Nate Graham 2026-01-05 19:40:14 UTC
Can reproduce.

In the meantime, you can find the .desktop file it created in ~.local/share/applications/ and delete it.
Comment 4 Bug Janitor Service 2026-02-03 10:53:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3509
Comment 5 Tobias Fella 2026-02-04 14:02:52 UTC
Git commit 2c5addcca5f8f73f261e2a5ef07bac4653092807 by Tobias Fella.
Committed on 04/02/2026 at 14:02.
Pushed by tfella into branch 'master'.

kcms/keys: Categorize user-added applications as Application, not SystemService

M  +26   -17   kcms/keys/globalaccelmodel.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/2c5addcca5f8f73f261e2a5ef07bac4653092807
Comment 6 Nate Graham 2026-02-05 02:52:17 UTC
Git commit 933c6e810cf5befe3f80175bb467655153c9c852 by Nate Graham.
Committed on 05/02/2026 at 02:26.
Pushed by ngraham into branch 'Plasma/6.6'.

kcms/keys: Categorize user-added applications as Application, not SystemService


(cherry picked from commit 2c5addcca5f8f73f261e2a5ef07bac4653092807)

a174b04f kcms/keys: Categorize user-added applications as Application, not SystemService
13ebc5ba Refactor

Co-authored-by: Tobias Fella <fella@posteo.de>

M  +26   -17   kcms/keys/globalaccelmodel.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/933c6e810cf5befe3f80175bb467655153c9c852