kcms/keys: Categorize user-added applications as Application, not SystemService

BUG: 513565